// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWrapper/> render() should render with a link 1`] = `
<Fragment>
  <CardHeaderIcon
    alt="HTTP"
    src="test-file-stub"
  />
  <CardHeaderTitle>
    HTTP
  </CardHeaderTitle>
  <CardHeaderSubtitle>
    <a
      href="https://foo.bar/?baz=BAZ"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Foo
      </span>
    </a>
  </CardHeaderSubtitle>
</Fragment>
`;

exports[`<TitleWrapper/> render() should render without link 1`] = `
<Fragment>
  <CardHeaderIcon
    alt="HTTP"
    src="test-file-stub"
  />
  <CardHeaderTitle>
    HTTP
  </CardHeaderTitle>
  <CardHeaderSubtitle>
    <span>
      Foo
    </span>
  </CardHeaderSubtitle>
</Fragment>
`;
